# map2struct

./: .gitignore
map2struct/: Cargo.toml  README.md
map2struct-derive/: Cargo.toml  README.md
map2struct-derive/src/: lib.rs
map2struct/src/: lib.rs
