[package]
name = "map2struct"
description = "A library for converting string-string hashmaps to structs."
homepage = "https://github.com/jmaarleveld/map2struct"
repository = "https://github.com/jmaarleveld/map2struct"
documentation = "https://docs.rs/map2struct"
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
map2struct-derive = "0.1.0"